# 2048

./: .gitignore  .gitmodules  2048.cxx  CMakeLists.txt  README.md  cursed_matrix.hpp
src/: board.hpp  game.hpp  main.cxx
